// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect base demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content  t-select-dropdown narrow-scrollbar"
            style="width: 0px;border: 1px solid #dcdcdc"
          >
            <div>
              <p
                class="t-select-loading-tips"
                style="display: none;"
              >
                <div
                  class="t-select-empty"
                >
                  加载中
                </div>
              </p>
              <div
                class="t-tree t-tree--hoverable t-tree--fx"
                size="medium"
              >
                <transition-group-stub
                  class="t-tree__list"
                  name="t-tree-toggle"
                  tag="div"
                >
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="1"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1.1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1.2
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="2"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2.1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2.2
                      </span>
                    </span>
                  </div>
                </transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <div
        class="t-select t-size-m t-select-selected"
      >
        <span
          class="t-select-placeholder"
          style="display: none;"
        >
          请选择
        </span>
        <span
          class="t-select-selectedSingle"
          title="1.1"
        >
          1.1
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="1.1"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect filterable demo works fine 1`] = `
<div
  class="tdesign-tree-select-filterable"
>
  <div
    class="operation"
  >
    <div
      class="t-radio-group t-radio-group-solid t-radio-group-medium"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="default"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          默认
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="function"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          自定义方法
        </span>
      </label>
      <div
        class="t-radio-group-solid-bg-block"
      />
    </div>
  </div>
   
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content  t-select-dropdown narrow-scrollbar"
            style="width: 0px;border: 1px solid #dcdcdc"
          >
            <div>
              <p
                class="t-select-loading-tips"
                style="display: none;"
              >
                <div
                  class="t-select-empty"
                >
                  加载中
                </div>
              </p>
              <div
                class="t-tree t-tree--hoverable t-tree--fx"
                size="medium"
              >
                <transition-group-stub
                  class="t-tree__list"
                  name="t-tree-toggle"
                  tag="div"
                >
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="1"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1.1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1.2
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="2"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2.1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2.2
                      </span>
                    </span>
                  </div>
                </transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <div
        class="t-select t-size-m t-select-selected"
      >
        <span
          class="t-select-placeholder"
          style="display: none;"
        >
          请选择
        </span>
        <span
          class="t-select-selectedSingle"
          title="1.1"
        >
          1.1
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="1.1"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect lazy demo works fine 1`] = `
<div
  class="tdesign-tree-select-lazy"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content  t-select-dropdown narrow-scrollbar"
            style="width: 0px;border: 1px solid #dcdcdc"
          >
            <div>
              <p
                class="t-select-loading-tips"
                style="display: none;"
              >
                <div
                  class="t-select-empty"
                >
                  加载中
                </div>
              </p>
              <div
                class="t-tree t-tree--hoverable t-tree--fx"
                size="medium"
              >
                <transition-group-stub
                  class="t-tree__list"
                  name="t-tree-toggle"
                  tag="div"
                >
                  <div
                    class="t-tree__item"
                    data-level="0"
                    data-value="1"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item"
                    data-level="0"
                    data-value="2"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2
                      </span>
                    </span>
                  </div>
                </transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <div
        class="t-select t-size-m"
      >
        <span
          class="t-select-placeholder"
        >
          请选择
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="请选择"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect multiple demo works fine 1`] = `
<div
  class="tdesign-tree-select-multiple"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content  t-select-dropdown narrow-scrollbar"
            style="width: 0px;border: 1px solid #dcdcdc"
          >
            <div>
              <p
                class="t-select-loading-tips"
                style="display: none;"
              >
                <div
                  class="t-select-empty"
                >
                  加载中
                </div>
              </p>
              <div
                class="t-tree t-tree--hoverable t-tree--checkable t-tree--fx"
                size="medium"
              >
                <transition-group-stub
                  class="t-tree__list"
                  name="t-tree-toggle"
                  tag="div"
                >
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="1"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <label
                      class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    >
                      <input
                        class="t-checkbox__former"
                        name="1"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="t-checkbox__input"
                      />
                      <span
                        class="t-checkbox__label"
                      >
                        1
                      </span>
                    </label>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <label
                      class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    >
                      <input
                        class="t-checkbox__former"
                        name="1.1"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="t-checkbox__input"
                      />
                      <span
                        class="t-checkbox__label"
                      >
                        1.1
                      </span>
                    </label>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <label
                      class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    >
                      <input
                        class="t-checkbox__former"
                        name="1.2"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="t-checkbox__input"
                      />
                      <span
                        class="t-checkbox__label"
                      >
                        1.2
                      </span>
                    </label>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="2"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <label
                      class="t-checkbox t-tree__label t-tree__label--strictly"
                    >
                      <input
                        class="t-checkbox__former"
                        name="2"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="t-checkbox__input"
                      />
                      <span
                        class="t-checkbox__label"
                      >
                        2
                      </span>
                    </label>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <label
                      class="t-checkbox t-tree__label t-tree__label--strictly"
                    >
                      <input
                        class="t-checkbox__former"
                        name="2.1"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="t-checkbox__input"
                      />
                      <span
                        class="t-checkbox__label"
                      >
                        2.1
                      </span>
                    </label>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <label
                      class="t-checkbox t-tree__label t-tree__label--strictly"
                    >
                      <input
                        class="t-checkbox__former"
                        name="2.2"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="t-checkbox__input"
                      />
                      <span
                        class="t-checkbox__label"
                      >
                        2.2
                      </span>
                    </label>
                  </div>
                </transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <div
        class="t-select t-size-m t-select-selected"
      >
        <span
          class="t-select-placeholder"
          style="display: none;"
        >
          请选择
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          1.1
          <svg
            class="t-icon t-icon-close"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          1.2
          <svg
            class="t-icon t-icon-close"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
            />
          </svg>
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect prefix demo works fine 1`] = `
<div
  class="tdesign-tree-select-prefix"
>
  <div>
    <div
      class="t-popup-reference t-select-popup-reference"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content  t-select-dropdown narrow-scrollbar"
            style="width: 0px;border: 1px solid #dcdcdc"
          >
            <div>
              <p
                class="t-select-loading-tips"
                style="display: none;"
              >
                <div
                  class="t-select-empty"
                >
                  加载中
                </div>
              </p>
              <div
                class="t-tree t-tree--hoverable t-tree--fx"
                size="medium"
              >
                <transition-group-stub
                  class="t-tree__list"
                  name="t-tree-toggle"
                  tag="div"
                >
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="1"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1.1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="1.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        1.2
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="0"
                    data-value="2"
                    style="--level: 0;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    >
                      <svg
                        class="t-icon t-icon-caret-right-small"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M384 320L384 704 672 512 384 320Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.1"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2.1
                      </span>
                    </span>
                  </div>
                  <div
                    class="t-tree__item t-tree__item--open"
                    data-level="1"
                    data-value="2.2"
                    style="--level: 1;"
                  >
                    <span
                      class="t-tree__icon t-folder-icon"
                      ignore="active"
                      trigger="expand"
                    />
                    <span
                      class="t-tree__label t-tree__label--strictly"
                    >
                      <span
                        style="position: relative;"
                      >
                        2.2
                      </span>
                    </span>
                  </div>
                </transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <div
        class="t-select t-size-m t-has-prefix"
      >
        <span
          class="t-select-left-icon"
        >
          <svg
            class="t-icon t-icon-user"
          >
            <use
              xlink:href="#t-icon-user"
            />
          </svg>
        </span>
        <span
          class="t-select-placeholder"
        >
          请输入
        </span>
        <div
          class="t-input t-size-m t-select-input"
          style="display: none;"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
        </div>
        <svg
          class="t-icon t-icon-chevron-down t-size-m t-select-right-icon"
          name="chevron-down"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="t-icon t-icon-close t-size-m t-select-right-icon"
          name="close"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
        <svg
          class="t-icon t-icon-loading t-size-m t-select-right-icon t-select-active-icon"
          name="loading"
          style="display: none;"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
